--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <ul>
     <li><a href = "#">LinkedIn Here</a></li>
     <li><a href ="#" >Twitter Here</a></li>
-    <li><a href = "#" >Github here</a></li>
+    <li><a href = "https://github.com/BDomogalla" >Github here</a></li>
   </ul>
   <table>
     <thead>
