adding link to baseball project

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <li><a href = "#">LinkedIn Here</a></li>
     <li><a href ="#" >Twitter Here</a></li>
     <li><a href = "https://github.com/BDomogalla" >Github here</a></li>
+    <li><a href = "https://bdomogalla.github.io/Project1/">Link to Baseball Project</a></li>
   </ul>
   <table>
     <thead>
